--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,13 +6,20 @@ environment:
   matrix:
     - nodejs_version: 0.10.29
       nw_version: 0.8.6
+      PLATFORM: x86
+    - nodejs_version: 0.10.29
+      nw_version: 0.8.6
+      PLATFORM: x64
     - nodejs_version: 0.8.26
+      PLATFORM: x86
+    - nodejs_version: 0.8.26
+      PLATFORM: x64
     - nodejs_version: 0.11.13
       nw_version: 0.10.0
-
-platform:
-  - x64
-  - x86
+      PLATFORM: x86
+    - nodejs_version: 0.11.13
+      nw_version: 0.10.0
+      PLATFORM: x64
 
 install:
   - ps: Update-NodeJsInstallation $env:nodejs_version $env:Platform
