--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,14 @@ environment:
       platform: x64
       msvs_toolset: 14
       BUILD_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11 --toolset=v140
+    - nodejs_version: 1.0.4
+      platform: x86
+      msvs_toolset: 12
+      BUILD_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11 --toolset=v140
+    - nodejs_version: 1.0.4
+      platform: x64
+      msvs_toolset: 12
+      BUILD_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11 --toolset=v140
     - nodejs_version: 0.10.32
       nw_version: 0.8.6
       platform: x86
