--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
    - NODE_VERSION="0.10.33"
    - NODE_VERSION="0.11.13"
    - NODE_VERSION="0.11.14"
-   - NODE_VERSION="1.0.0"
+   - IOJS_VERSION="1.0.0"
    - NODE_WEBKIT="0.8.6" TARGET_ARCH="ia32"
    - NODE_WEBKIT="0.8.6" TARGET_ARCH="x64"
    - NODE_WEBKIT="0.10.5" TARGET_ARCH="ia32"
@@ -52,4 +52,5 @@ before_script:
 
 script:
 - if [[ "${NODE_VERSION}" ]]; then ./scripts/build_against_node.sh; fi;
+- if [[ "${IOJS_VERSION}" ]]; then ./scripts/build_against_iojs.sh; fi;
 - if [[ "${NODE_WEBKIT}" ]]; then ./scripts/build_against_node_webkit.sh; fi;
