npm install can't find node-pre-gyp.

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     },
     "scripts": {
         "prepublish":"npm ls",
-        "install": "node-pre-gyp install --fallback-to-build",
+        "install": "node_modules/node-pre-gyp/bin/node-pre-gyp install --fallback-to-build",
         "pretest": "node test/support/createdb.js",
         "test": "mocha -R spec --timeout 480000"
     },
