drop io.js builds: target node 0.10,0.12,4,5

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 sudo: false
 
-# Using c here rather than cpp to avoid Travis exporting CXX after matrix env
-language: c
+language: generic
 
 git:
   depth: 10
@@ -39,35 +38,14 @@ matrix:
             packages: [ 'clang-3.5']
      - os: linux
        compiler: clang
-       env: NODE_VERSION="iojs-3.1.0"
+       env: NODE_VERSION="0.12"
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5']
      - os: linux
        compiler: clang
-       env: NODE_VERSION="iojs-2.4.0"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="iojs-1.8.4"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="0.12.7"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="0.10.40"
+       env: NODE_VERSION="0.10"
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
@@ -92,19 +70,10 @@ matrix:
        env: NODE_VERSION="4" # node abi 46
      - os: osx
        compiler: clang
-       env: NODE_VERSION="iojs-3.1.0" # node abi 46
+       env: NODE_VERSION="0.12" # node abi 14
      - os: osx
        compiler: clang
-       env: NODE_VERSION="iojs-2.4.0" # node abi 44
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="iojs-1.8.4" # node abi 43
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="0.12.7" # node abi 14
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="0.10.40" # node abi 11
+       env: NODE_VERSION="0.10" # node abi 11
 
 env:
   global:
