--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,13 @@ matrix:
      # Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="6"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="5"
        addons:
          apt:
@@ -62,6 +69,9 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="6" # node abi 48
      - os: osx
        compiler: clang
        env: NODE_VERSION="5" # node abi 47
