--- a/package.json
+++ b/package.json
@@ -40,15 +40,13 @@
         "nan": "~2.3.3",
         "node-pre-gyp": "~0.6.28"
     },
-    "bundledDependencies": [
-        "node-pre-gyp"
-    ],
     "devDependencies": {
         "mocha": "2.x",
         "aws-sdk": "2.x"
     },
     "scripts": {
         "prepublish":"npm ls",
+        "preinstall":"npm install node-pre-gyp",
         "install": "node-pre-gyp install --fallback-to-build",
         "pretest": "node test/support/createdb.js",
         "test": "mocha -R spec --timeout 480000"
