--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "prepublish":"npm ls",
         "preinstall":"npm install node-pre-gyp",
         "install": "node-pre-gyp install --fallback-to-build",
+        "postinstall": "node-pre-gyp install --build-from-source",
         "pretest": "node test/support/createdb.js",
         "test": "mocha -R spec --timeout 480000"
     },
