--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sqlite3",
     "description": "Asynchronous, non-blocking SQLite3 bindings",
-    "version": "3.1.5",
+    "version": "3.1.6",
     "homepage": "http://github.com/mapbox/node-sqlite3",
     "author": {
         "name": "MapBox",
@@ -40,13 +40,15 @@
         "nan": "~2.3.3",
         "node-pre-gyp": "~0.6.28"
     },
+    "bundledDependencies": [
+        "node-pre-gyp"
+    ],
     "devDependencies": {
         "mocha": "2.x",
         "aws-sdk": "2.x"
     },
     "scripts": {
         "prepublish":"npm ls",
-        "preinstall":"npm install node-pre-gyp",
         "install": "node-pre-gyp install --fallback-to-build",
         "pretest": "node test/support/createdb.js",
         "test": "mocha -R spec --timeout 480000"
