--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,13 @@ matrix:
      # Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="7"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="6"
        addons:
          apt:
@@ -60,7 +67,7 @@ matrix:
      # test building against external sqlite
      - os: linux
        compiler: clang
-       env: NODE_VERSION="0.10.40" EXTERNAL_SQLITE=true PUBLISHABLE=false
+       env: NODE_VERSION="0.10" EXTERNAL_SQLITE=true PUBLISHABLE=false
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
@@ -69,6 +76,9 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="7" # node abi 51
      - os: osx
        compiler: clang
        env: NODE_VERSION="6" # node abi 48
