--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,6 +64,24 @@ environment:
       NODE_RUNTIME: electron
       NODE_RUNTIME_VERSION: 1.6.3
       TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 6
+      platform: x86
+      msvs_toolset: 12
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.6.3
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 6
+      platform: x64
+      msvs_toolset: 12
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.3.14
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 6
+      platform: x86
+      msvs_toolset: 12
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.3.14
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
 
 os: Visual Studio 2015
 
