--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "node-pre-gyp"		
   ],
   "devDependencies": {
+    "node-gyp": "^3.6.1",
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
     "mocha": "3.x"
