--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,35 +6,41 @@
 # Note/TODO: it is not yet confirmed that earlier versions work with the the `Visual Studio 2017` os image. 
 os: Visual Studio 2015
 
+platform:
+  - x86
+  - x64
+
 environment:
   matrix:
     - nodejs_version: 0.10
-      msvs_toolset: 14
-      platform: x64
-    - nodejs_version: 0.10
-      msvs_toolset: 14
-      platform: x86
+      msvs_toolset: 12
+    - nodejs_version: 0.12
+      msvs_toolset: 12
+    - nodejs_version: 4
+      msvs_toolset: 12
+    - nodejs_version: 5
+      msvs_toolset: 12
+    - nodejs_version: 6
+      msvs_toolset: 12
+    - nodejs_version: 7
+      msvs_toolset: 12
+    - nodejs_version: 8
+      msvs_toolset: 12
+    # visual studio 2015 builds
     - nodejs_version: 4
       msvs_toolset: 14
-      platform: x64
-    - nodejs_version: 4
+    - nodejs_version: 5
       msvs_toolset: 14
-      platform: x86
     - nodejs_version: 6
       msvs_toolset: 14
-      platform: x64
-    - nodejs_version: 6
+    - nodejs_version: 7
       msvs_toolset: 14
-      platform: x86
     - nodejs_version: 8
       msvs_toolset: 14
-      platform: x64
-    - nodejs_version: 8
-      msvs_toolset: 14
-      platform: x86
 
 install:
-  - ps: Start-FileDownload 'https://github.com/mapbox/ci-scripts/raw/v1.0.0/node/ci-cpp.bat' -FileName ci.bat
+#TODO: link to versioned build script
+  - ps: Start-FileDownload 'https://github.com/mapbox/ci-scripts/raw/master/node/ci-cpp.bat' -FileName ci.bat
   - CALL ci.bat
 
 build: OFF
