--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,10 @@ platform:
   - x64
 
 environment:
+  node_pre_gyp_accessKeyId:
+    secure: 7DrSVc5eIGtmMcki5H+iRft+Tk3MJTwDBQEUuJHWaQ4=
+  node_pre_gyp_secretAccessKey:
+    secure: 1amwJJw9fu0j6dXnc5KsAQbSYf7Cjw/dapT6OZWABa6nc52grkKeLQ+DGaOfQz8i
   matrix:
     - nodejs_version: 0.10
       msvs_toolset: 12
@@ -33,8 +37,7 @@ environment:
       msvs_toolset: 14
 
 install:
-#TODO: link to versioned build script
-  - ps: Start-FileDownload 'https://github.com/mapbox/ci-scripts/raw/master/node/ci-cpp.bat' -FileName ci.bat
+  - ps: Start-FileDownload 'https://github.com/mapbox/ci-scripts/raw/v1.1.0/node/ci-cpp.bat' -FileName ci.bat
   - CALL ci.bat
 
 build: OFF
