Fix createdb.js segfault due to missing supress destruct

--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "node-addon-api": "~0.3.5",
-    "node-pre-gyp": "~0.6.28"
+    "node-addon-api": "^0.3.5",
+    "node-pre-gyp": "^0.6.36"
   },
-  "bundledDependencies": [		
-      "node-pre-gyp"		
+  "bundledDependencies": [
+    "node-pre-gyp"
   ],
   "devDependencies": {
     "node-gyp": "^3.6.1",
@@ -51,9 +51,10 @@
   },
   "scripts": {
     "prepublish": "npm ls",
+    "preinstall": "npm install node-pre-gyp node-addon-api",
     "install": "node-pre-gyp install --fallback-to-build",
-    "pretest": "node test/support/createdb.js",
-    "test": "mocha -R spec --timeout 480000"
+    "pretest": "node --napi-modules test/support/createdb.js",
+    "test": "node --napi-modules node_modules/mocha/bin/_mocha -R spec --timeout 480000"
   },
   "license": "BSD-3-Clause",
   "keywords": [
