--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sqlite3",
   "description": "Asynchronous, non-blocking SQLite3 bindings",
-  "version": "3.1.9",
+  "version": "3.1.10-alpha",
   "homepage": "http://github.com/mapbox/node-sqlite3",
   "author": {
     "name": "MapBox",
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "nan": "~2.6.2",
-    "node-pre-gyp": "~0.6.36"
+    "node-pre-gyp": "~0.6.37"
   },
   "bundledDependencies": [
     "node-pre-gyp"
