--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
   },
   "dependencies": {
     "nan": "~2.7.0",
-    "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp/tarball/node-v0.10"
+    "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp/tarball/master"
   },
   "bundledDependencies": [
     "node-pre-gyp"
   ],
   "devDependencies": {
-    "node-gyp": "^3.6.1",
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
     "mocha": "3.x"
