--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "nan": "~2.7.0",
-    "node-pre-gyp": "https://github.com/mapbox/node-pre-gyp/tarball/master"
+    "node-pre-gyp": "~0.6.38"
   },
   "bundledDependencies": [
     "node-pre-gyp"
