--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,13 @@ matrix:
      # Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="9"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="8"
        addons:
          apt:
@@ -72,6 +79,9 @@ matrix:
      - os: osx
        compiler: clang
        env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
+     - os: osx
+       compiler: clang
+       env: NODE_VERSION="9" # node abi 58
      - os: osx
        compiler: clang
        env: NODE_VERSION="8" # node abi 57
