--- a/.travis.yml
+++ b/.travis.yml
@@ -1,105 +1,21 @@
 sudo: false
 
-language: generic
+language: node_js
+node_js:
+ - "node"
+ - "lts/*"
+ - "7"
+ - "6"
+ - "5"
+ - "4"
 
-dist: precise
+dist: trusty
+os:
+ - linux
+ - osx
 
 git:
   depth: 10
-
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.5
-    packages:
-     - clang-3.5
-
-matrix:
-  include:
-     # Linux
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="9"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="8"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="7"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="6"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="5"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="4"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="0.10"
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
-     # test building against external sqlite
-     - os: linux
-       compiler: clang
-       env: NODE_VERSION="0.10" EXTERNAL_SQLITE=true PUBLISHABLE=false
-       addons:
-         apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5','libsqlite3-dev']
-     # OS X
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="9" # node abi 58
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="8" # node abi 57
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="7" # node abi 51
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="6" # node abi 48
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="5" # node abi 47
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="4" # node abi 46
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="0.10" # node abi 11
 
 env:
   global:
@@ -111,14 +27,11 @@ before_install:
 - export PUBLISHABLE=${PUBLISHABLE:-true}
 - export COVERAGE=${COVERAGE:-false}
 - if [[ $(uname -s) == 'Linux' ]]; then
-    export CXX="clang++-3.5";
-    export CC="clang-3.5";
     export PYTHONPATH=$(pwd)/py-local/lib/python2.7/site-packages;
   else
     export PYTHONPATH=$(pwd)/py-local/lib/python/site-packages;
   fi;
 - scripts/validate_tag.sh
-- source ./scripts/install_node.sh ${NODE_VERSION}
 
 install:
 # put node-pre-gyp on path
@@ -136,7 +49,7 @@ before_script:
    fi
 
 script:
-- if [[ "${NODE_VERSION}" ]]; then ./scripts/build_against_node.sh; fi;
-- if [[ "${NODE_VERSION}" -eq "4" ]]; then ./node_modules/.bin/eslint lib; fi;
+- ./scripts/build_against_node.sh;
+- if [ $(node --version | cut -d. -f1) = 'v8' ]; then ./node_modules/.bin/eslint lib; fi;
 # disabled for now: need to port to sudo:false
 #- if [[ "${NODE_WEBKIT}" ]]; then ./scripts/build_against_node_webkit.sh; fi;
