--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,26 @@ environment:
     - nodejs_version: 9
       platform: x86
     # electron
+    - nodejs_version: 8
+      platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.8.4
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 8
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.8.4
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 7
+      platform: x64
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.7.12
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
+    - nodejs_version: 7
+      platform: x86
+      NODE_RUNTIME: electron
+      NODE_RUNTIME_VERSION: 1.7.12
+      TOOLSET_ARGS: --dist-url=https://atom.io/download/electron
     - nodejs_version: 6
       platform: x64
       msvs_toolset: 12
