--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,13 @@ matrix:
             packages: [ 'clang-3.5']
      - os: linux
        compiler: clang
+       env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="4"
        addons:
          apt:
@@ -69,9 +76,6 @@ matrix:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
             packages: [ 'clang-3.5','libsqlite3-dev']
      # OS X
-     - os: osx
-       compiler: clang
-       env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
      - os: osx
        compiler: clang
        env: NODE_VERSION="9" # node abi 58
@@ -148,7 +152,8 @@ before_script:
 - export COMMIT_MESSAGE=$(git show -s --format=%B $TRAVIS_COMMIT | tr -d '\n')
 - if [[ ${COVERAGE} == true ]]; then
      if [[ $(uname -s) == 'Linux' ]]; then
-       PYTHONUSERBASE=$(pwd)/py-local pip install --user cpp-coveralls;
+       curl https://bootstrap.pypa.io/get-pip.py | python - --user;
+       pip install --user cpp-coveralls;
      else
        PYTHONUSERBASE=$(pwd)/py-local easy_install --user cpp-coveralls;
      fi;
