--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,10 @@ environment:
       platform: x64
     - nodejs_version: 9
       platform: x86
+    - nodejs_version: 10
+      platform: x64
+    - nodejs_version: 10
+      platform: x86
 
 os: Visual Studio 2015
 
