--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
-    "nan": "~2.9.2",
-    "node-pre-gyp": "~0.9.0"
+    "nan": "~2.10.0",
+    "node-pre-gyp": "~0.10.0"
   },
   "bundledDependencies": [
     "node-pre-gyp"
@@ -46,7 +46,7 @@
   "devDependencies": {
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
-    "mocha": "3.x"
+    "mocha": "^5.1.1"
   },
   "scripts": {
     "prepublishOnly": "npm ls",
