--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,13 @@ matrix:
      # electron Linux
      - os: linux
        compiler: clang
+       env: NODE_VERSION="6" ELECTRON_VERSION="2.0.1"
+       addons:
+         apt:
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.5']
+     - os: linux
+       compiler: clang
        env: NODE_VERSION="6" ELECTRON_VERSION="1.8.4"
        addons:
          apt:
