--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 
 language: generic
 
-dist: precise
+dist: trusty
 
 git:
   depth: 10
@@ -11,9 +11,9 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.5
+    - llvm-toolchain-trusty-3.9
     packages:
-     - clang-3.5
+     - clang-3.9
 
 matrix:
   include:
@@ -23,51 +23,51 @@ matrix:
        env: NODE_VERSION="9"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="8"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="7"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="6"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="5"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="4"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9']
      # test building against external sqlite
      - os: linux
        compiler: clang
        env: NODE_VERSION="8" EXTERNAL_SQLITE=true PUBLISHABLE=false
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5','libsqlite3-dev']
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            packages: [ 'clang-3.9','libsqlite3-dev']
      # OS X
      - os: osx
        compiler: clang
@@ -99,8 +99,8 @@ before_install:
 - export PUBLISHABLE=${PUBLISHABLE:-true}
 - export COVERAGE=${COVERAGE:-false}
 - if [[ $(uname -s) == 'Linux' ]]; then
-    export CXX="clang++-3.5";
-    export CC="clang-3.5";
+    export CXX="clang++-3.9";
+    export CC="clang-3.9";
     export PYTHONPATH=$(pwd)/py-local/lib/python2.7/site-packages;
   else
     export PYTHONPATH=$(pwd)/py-local/lib/python/site-packages;
