--- a/.travis.yml
+++ b/.travis.yml
@@ -23,42 +23,42 @@ matrix:
        env: NODE_VERSION="9"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="8"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="7"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="6"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="5"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      - os: linux
        compiler: clang
        env: NODE_VERSION="4"
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9']
      # test building against external sqlite
      - os: linux
@@ -66,7 +66,7 @@ matrix:
        env: NODE_VERSION="8" EXTERNAL_SQLITE=true PUBLISHABLE=false
        addons:
          apt:
-            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
+            sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-trusty-3.9' ]
             packages: [ 'clang-3.9','libsqlite3-dev']
      # OS X
      - os: osx
