--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ matrix:
      # OS X
      - os: osx
        compiler: clang
+       osx_image: xcode9.4
        env: NODE_VERSION="5" COVERAGE=true PUBLISHABLE=false # node abi 47
      - os: osx
        compiler: clang
