--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,10 @@ environment:
   matrix:
     - nodejs_version: 4
       platform: x64
+      msvs_toolset: 12
     - nodejs_version: 4
       platform: x86
+      msvs_toolset: 12
     - nodejs_version: 5
       platform: x64
     - nodejs_version: 5
