--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "url": "git://github.com/mapbox/node-sqlite3.git"
   },
   "dependencies": {
+    "node-addon-api": "^1.2.0",
     "nan": "~2.10.0",
     "node-pre-gyp": "~0.10.1"
   },
