--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,6 @@ dist: precise
 git:
   depth: 10
 
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.5
-    packages:
-     - clang-3.5
-
 matrix:
   include:
      # Linux
@@ -23,6 +15,7 @@ matrix:
        env: NODE_VERSION="10"
        addons:
          apt:
+            sources: [ 'ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5' ]
             packages: [ 'clang-3.5', 'libstdc++-4.9-dev']
      # test building against external sqlite
      - os: linux
@@ -31,7 +24,7 @@ matrix:
        addons:
          apt:
             sources: [ 'ubuntu-toolchain-r-test','llvm-toolchain-precise-3.5', 'gcc-multilib', 'g++-multilib', 'libsqlite3-dev:i386' ]
-            packages: [ 'clang-3.5','libsqlite3-dev']
+            packages: [ 'clang-3.5', 'libstdc++-4.9-dev', 'libsqlite3-dev']
      # OS X
      - os: osx
        compiler: clang
