--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://mapbox.com/"
   },
   "binary": {
-    "module_name": "node_sqlite3_ac",
+    "module_name": "node_sqlite3",
     "module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
     "host": "https://mapbox-node-binary.s3.amazonaws.com",
     "remote_path": "./{name}/v{version}/{toolset}/",
