tweak name to prevent binary install of fork

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqlite3_ac",
+  "name": "sqlite3",
   "description": "Asynchronous, non-blocking SQLite3 bindings",
   "version": "4.1.1",
   "homepage": "https://github.com/mapbox/node-sqlite3",
@@ -11,7 +11,7 @@
     "module_name": "node_sqlite3",
     "module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
     "host": "https://mapbox-node-binary.s3.amazonaws.com",
-    "remote_path": "./{name}/v{version}/{toolset}/",
+    "remote_path": "./{name}_ac/v{version}/{toolset}/",
     "package_name": "{node_abi}-{platform}-{arch}.tar.gz"
   },
   "contributors": [
