--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@mapbox/cloudfriend": "^1.9.0",
     "aws-sdk": "2.x",
     "eslint": "3.5.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "zeromq": "^5.2.8"
   },
   "peerDependencies": {
     "node-gyp": "8.1.0"
