Updated repository links in `package.json`
refs https://docs.npmjs.com/cli/v7/configuring-npm/package-json#repository

- this updates the repository URLs so NPM will link to the correct repo
  now it's moved under the TryGhost organization

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sqlite3",
   "description": "Asynchronous, non-blocking SQLite3 bindings",
   "version": "5.0.2",
-  "homepage": "https://github.com/mapbox/node-sqlite3",
+  "homepage": "https://github.com/TryGhost/node-sqlite3",
   "author": {
     "name": "MapBox",
     "url": "https://mapbox.com/"
@@ -38,7 +38,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/mapbox/node-sqlite3.git"
+    "url": "https://github.com/TryGhost/node-sqlite3.git"
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.0",
