--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,16 @@ jobs:
       - name: Package prebuilt binaries
         run: yarn node-pre-gyp package
 
-      - name: Upload build artifacts
+      - name: Upload build artifacts to commit artifacts
         uses: actions/upload-artifact@v3
         if: matrix.node == 16
         with:
           name: prebuilt-binaries
           path: build/stage/sqlite3/*/*
           retention-days: 7
+
+      - name: Upload binaries to GitHub Release
+        run: yarn node-pre-gyp-github publish
+        if: matrix.node == 16 && startsWith(github.ref, 'refs/tags/')
+        env:
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ github.token }}
