Updated Windows CI runner to `windows-latest`
closes https://github.com/TryGhost/node-sqlite3/issues/1565

- now `node-gyp` has been updated to 8.x, we should now support building
  on Visual Studio 22
- this was the blocker from using `windows-latest`, so we can now update
  to that

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         os:
           - macos-latest
           - ubuntu-latest
-          - windows-2019
+          - windows-latest
         architecture:
           - x64
         node:
@@ -27,7 +27,7 @@ jobs:
           - 16
           - 17
         include:
-          - os: windows-2019
+          - os: windows-latest
             node: 16
             architecture: x86
     name: ${{ matrix.os }} ${{ matrix.architecture }} - Node ${{ matrix.node }}
