Fixed uploading binaries to commit artifacts
refs https://github.com/TryGhost/node-sqlite3/commit/7f744a1dca2664af2fb8957ca68977ba36f134cb

- the packaged binaries path changed locally so the binaries weren't
  getting uploaded

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
         if: matrix.node == 16
         with:
           name: prebuilt-binaries
-          path: build/stage/sqlite3/*/*
+          path: build/stage/*/*
           retention-days: 7
 
       - name: Upload binaries to GitHub Release
