WIP: build Linux ARM binaries in CI

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "binary": {
     "module_name": "node_sqlite3",
-    "module_path": "./lib/binding/napi-v{napi_build_version}-{platform}-{arch}",
+    "module_path": "./lib/binding/napi-v{napi_build_version}-{platform}-{libc}-{arch}",
     "host": "https://github.com/TryGhost/node-sqlite3/releases/download/",
     "remote_path": "v{version}",
-    "package_name": "napi-v{napi_build_version}-{platform}-{arch}.tar.gz",
+    "package_name": "napi-v{napi_build_version}-{platform}-{libc}-{arch}.tar.gz",
     "napi_versions": [
       3,
       6
